// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`joint 1`] = `
Object {
  "resets": 0,
  "value1": Object {
    "actions": Array [
      "bar",
      "ev",
    ],
  },
}
`;

exports[`joint 2`] = `
Object {
  "resets": 1,
  "value1": Object {
    "actions": Array [
      "bar",
    ],
  },
}
`;

exports[`mill 1`] = `
Object {
  "resets": 0,
  "value1": Object {
    "actions": Array [
      "bar",
      "ev",
    ],
  },
}
`;

exports[`mill 2`] = `
Object {
  "resets": 1,
  "value1": Object {
    "actions": Array [
      "bar",
    ],
  },
}
`;

exports[`reducer 1`] = `
Object {
  "actions": Array [
    "bar",
    "ev",
  ],
}
`;

exports[`reducer 2`] = `
Object {
  "actions": Array [
    "bar",
    "ev",
    "ev2",
  ],
}
`;

exports[`reducer 3`] = `
Object {
  "actions": Array [
    "bar",
  ],
}
`;
